--- a/projects/latentphotons.html
+++ b/projects/latentphotons.html
@@ -466,11 +466,12 @@
   text-align: left;
   width: 90%;
   max-width: 900px;
-  align-items: center;
-  flex-direction: row;">
+  text-align: center;">
 
     <video id="webcam" autoplay playsinline controls style="
     width: 100%;
+    margin: auto;
+
     max-width: 400px;
     filter: grayscale(100%) contrast(1.2) brightness(0.9) skew(5deg);
     transition: filter 0.3s;"></video>
@@ -482,7 +483,7 @@
     color: #fff;
     font-family: Georgia, serif;
     line-height: 1.4;
-    text-align: center;;
+    text-align: left;
     background: #111;
     border: 1px solid #444;
     padding: 10px;
