--- a/projects/latentphotons.html
+++ b/projects/latentphotons.html
@@ -538,6 +538,8 @@
         .then(stream => { video.srcObject = stream; })
         .catch(err => { console.error("Webcam error:", err); alert("Unable to access webcam."); });
       } else { alert("Webcam not supported."); }
+      // Set the initial language to English in the annotation
+      // @todo: Change this to the current language
       changeLanguage('en');
     }
 
