--- a/projects/latentphotons.html
+++ b/projects/latentphotons.html
@@ -289,28 +289,41 @@
       <img alt="Glass Plate 1" src="../img/latentphotons/screen4.jpg" />
       <img alt="Glass Plate 1" src="../img/latentphotons/screen3.jpg" />
     </div>
+    <div class="project-img">
+      <img alt="Glass Plate 1" src="../img/latentphotons/ryba3.gif" />
+    </div>
 
     <h2 id="chapter2"></h2>
     <p id="chapter2Text"></p>
     <div class="project-img">
       <img alt="Glass Plate 1" src="../img/latentphotons/lense1.gif" />
-      <img alt="Glass Plate 1" src="../img/latentphotons/ryba3.gif" />
+    </div>
+    <div class="gallery-img">
+      <img alt="Glass Plate 1" src="../img/latentphotons/wormhole.gif" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/wormhole2.gif" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/wormhole4.gif" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/wormhole3.gif" />
     </div>
 
     <h2 id="chapter3"></h2>
     <p id="chapter3Text"></p>
-    <div class="project-img">
-      <img alt="Glass Plate 1" src="../img/latentphotons/100112.jpg" />
-    </div>
     <div class="gallery-img">
-      <img alt="Glass Plate 1" src="../img/latentphotons/glass1.jpg" />
-      <img alt="Glass Plate 1" src="../img/latentphotons/glass.jpg" />
-      <img alt="Glass Plate 1" src="../img/latentphotons/glass2.jpg" />
-      <img alt="Glass Plate 1" src="../img/latentphotons/10012.jpg" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/wormhole5.png"/>
+      <img alt="Glass Plate 1" src="../img/latentphotons/spekt1.gif"/>
     </div>
 
     <h2 id="chapter4"></h2>
     <p id="chapter4Text"></p>
+
+    <div class="project-img">
+      <img alt="Glass Plate 1" src="../img/latentphotons/100112.jpg" />
+    </div>
+    <div class="gallery-img">
+      <img alt="Glass Plate 1" src="../img/latentphotons/glass.jpg" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/glass1.jpg" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/glass2.jpg" />
+      <img alt="Glass Plate 1" src="../img/latentphotons/10012.jpg" />
+    </div>
 
     <!-- <div class="gallery-img">
       <img alt="Glass Plate 1" src="../img/latentphotons/rainbow.gif" />
